[package]

name = "hematite"
version = "0.0.20"
license = "MIT"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["minecraft", "piston", "client"]
description = "A simple Minecraft client"
repository = "https://github.com/PistonDevelopers/hematite.git"
homepage = "http://hematite.piston.rs"
exclude = ["home/*"]

[profile.release]
opt-level = 2
debug = false

[[bin]]

name = "hematite"
path = "src/main.rs"

[dependencies]
byteorder = "1.0.0"
camera_controllers = "0.22.0"
docopt = "0.6.78"
flate2 = "0.2.13"
fps_counter = "1.0.0"
gfx = "0.16.0"
gfx_core = "0.7.0"
gfx_device_gl = "0.14.0"
libc = "0.2.7"
memmap = "0.2.3"
piston = "0.34.0"
piston3d-gfx_voxel = "0.20.0"
pistoncore-glutin_window = "0.40.0"
rustc-serialize = "0.3.18"
shader_version = "0.3.0"
vecmath = "0.3.0"
zip = "0.1.16"
