[package]

name = "hematite"
version = "0.0.34"
edition = "2018"
license = "MIT"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = ["minecraft", "piston", "client"]
description = "A simple Minecraft client"
repository = "https://github.com/PistonDevelopers/hematite.git"
homepage = "http://hematite.piston.rs"

[[bin]]

name = "hematite"
path = "src/main.rs"

[dependencies]
byteorder = "1.4.3"
camera_controllers = "0.27.0"
docopt = "0.7.0"
flate2 = "1.0.20"
fps_counter = "2.0.0"
gfx = "0.17.1"
gfx_core = "0.8.3"
gfx_device_gl = "0.15.5"
libc = "0.2.97"
memmap = "0.5.2"
piston = "0.42.0"
piston3d-gfx_voxel = "0.27.0"
pistoncore-glutin_window = "0.54.0"
rustc-serialize = "0.3.24"
shader_version = "0.3.0"
vecmath = "1.0.0"
zip = "0.5.13"
